<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:windowBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/favorite_toolbar"
        style="@style/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height_64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/favorite_screen_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vacancies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite_toolbar"
        tools:itemCount="10"
        tools:listitem="@layout/search_item_view"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_160dp"
        android:contentDescription="@string/favorite_list_empty"
        android:src="@drawable/favorite_list_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_empty"
        style="@style/text_22_display_medium_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center"
        android:text="@string/favorite_list_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_empty" />

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_160dp"
        android:contentDescription="@string/error_getting_vacancies"
        android:src="@drawable/no_vacancy_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/text_22_display_medium_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center"
        android:text="@string/error_getting_vacancies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_error" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_empty, tv_empty"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_error, tv_error" />

</androidx.constraintlayout.widget.ConstraintLayout>
