<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height_64dp"
        app:buttonGravity="center_vertical"
        app:navigationIcon="@drawable/ic_arrow_back_16px"
        app:title="@string/choose_place_of_work" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/countryClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/countryEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countryTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/country" />

        <TextView
            android:id="@+id/countryBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countryTop"
            tools:text="Russia" />

        <ImageView
            android:id="@+id/countryNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="17dp"
            android:src="@drawable/ic_arrow_forward_14px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/countryRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_krest"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/regionClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/regionEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/regionTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/region" />

        <TextView
            android:id="@+id/regionBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regionTop"
            tools:text="Russia" />

        <ImageView
            android:id="@+id/regionNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="17dp"
            android:src="@drawable/ic_arrow_forward_14px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/regionRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_krest"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/margin_size_24"
        android:background="@drawable/search_button_shape"
        android:backgroundTint="@color/light_blue"
        android:text="@string/choose"
        android:visibility="gone"
        android:textAppearance="@style/text_16_regular_500"
        android:textColor="?attr/colorOnSurface"
        app:cornerRadius="@dimen/dimen_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>
